Pending changes in the mainline
===============================


Version 1.10.1 (2022-03-23)
===========================

General
-------

* Improved DICOM authorization checks when multiple modalities are
  declared with the same AET.

Plugins
-------

* New function in the SDK: "OrthancPluginRegisterWebDavCollection()"
  to map a WebDAV virtual filesystem into the REST API of Orthanc.

Documentation
-------------

* Removed the "LimitJobs" configuration that is not used anymore since
  the new JobEngine has been introduced (in Orthanc 1.4.0). The
  pending list of jobs is unlimited.


Version 1.10.0 (2022-02-23)
===========================

General
-------

* New configuration "DicomAlwaysAllowFindWorklist" to complement the existing
  "DicomAlwaysAllowFind" configuration.  "DicomAlwaysAllowFind" applies now 
  only to C-Find for Patients/Studies/Series/Instances while C-Find for worklists are
  covered by "DicomAlwaysAllowFindWorklist".  The same changes applies to new 
  configurations in "DicomModalities": "AllowFind" is now complemented by 
  "AllowFindWorklist".
  This new option allows improved security management.  E.g: a modality might have
  only "AllowStore" and "AllowFindWorklist" enabled but might have "AllowFind"
  disabled to prevent listing past patient studies.
  Possible BREAKING-CHANGE: if you relied on "DicomAlwaysAllowFind" or "AllowFind"
  to specifically authorize C-Find for worklist, you now need to explicitly enable
  "DicomAlwaysAllowFindWorklist" and/or "AllowFindWorklist"
* Added a storage cache in RAM to avoid reading the same files multiple times from 
  the storage.  This greatly improves, among other things, the performance of WADO-RS
  retrieval of individual frames of multiframe instances.
* New configuration option "MaximumStorageCacheSize" to configure the size of
  the new storage cache.
* New experimental configuration option "ZipLoaderThreads" to configure the number of 